# relly-clone

./: Cargo.toml
examples/: btree-all.rs  btree-create.rs  simple-table-all.rs  simple-table-create.rs  simple-table-exact.rs  simple-table-plan.rs  simple-table-range.rs  table-create.rs  table-plan.rs
src/: bsearch.rs  btree.rs  buffer.rs  disk.rs  lib.rs  query.rs  slotted.rs  table.rs  tuple.rs
src/btree/: branch.rs  leaf.rs
