[package]
name = "relly-clone"
version = "0.1.0"
authors = ["minus3theta <yone_j_synthesis@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
serde = { version = "1.0.125", features = ["derive"] }
zerocopy = "0.5.0"
bincode = "1.3.3"

[dev-dependencies]
anyhow = "1.0.40"
tempfile = "3.2.0"
